Fixed extra ref count problem for blocker bug 10138